fix: remove extra padding

--- a/assets/styling/photos.css
+++ b/assets/styling/photos.css
@@ -22,7 +22,7 @@
 .img-container img {
   width: 98%;
   height: 98%;
-  padding: 1%;
+  /* padding: 1%; */
   /* margin-right: 5px; */
   /* border: 5px solid black; */
   /* margin: 10px; */
